# fastapi-GA

./: .env.sample  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: test.yaml
configurations/: .env.sample  README.md
server/: main.py
server/config/: factory.py  smtp.py
server/config/environments/: base.py  sqlite_test.py
server/database/: managers.py
server/database/products/: crud.py
server/database/shops/: crud.py
server/database/users/: auth.py
server/models/: base.py  managers.py
server/models/documents/: products.py
server/models/schemas/: users.py
server/routes/: auth.py  products.py  shops.py  users.py
server/schemas/: base.py
server/schemas/common/: products.py  users.py
server/schemas/inc/: auth.py  products.py
server/security/: authentication.py  dependencies.py  token.py
server/templates/: activation.html  base.html  change-email.html  password-reset.html  styles.html
server/utils/: email.py  enums.py  formatters.py  generators.py  messages.py
tests/: test_formatters.py  test_health.py
