[tool.poetry]
name = "fastapi-ga"
version = "0.1.0"
description = "Demonstration of a basic fastapi RESTful API and GitHub Actions"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "fastapi_ga"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.97.0"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
asyncpg = "^0.27.0"
beanie = "^1.19.2"
sqlmodel = "^0.0.8"
pytest = "^7.3.2"
coverage = "^7.2.7"
python-decouple = "^3.8"
redis = "^4.5.5"
pydash = "^7.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
typer = "^0.9.0"
fastapi-mail = "^1.2.8"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
